--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -22,7 +22,6 @@
   align-items: center;
 
   padding: 0 15px;
-  overflow: scroll;
 
   @media screen and (max-width: 767px) {
     width: 100%;
